[package]
authors = ["eeeeeta <eeeeeta@users.noreply.github.com>"]
description = "High-performance realtime audio library"
documentation = "https://docs.rs/sqa-engine"
keywords = ["audio", "sqa"]
license = "CC0-1.0"
name = "sqa-engine"
readme = "README.md"
repository = "https://github.com/eeeeeta/sqa-engine"
version = "0.4.0"

[dependencies]
bounded-spsc-queue = "0.4"
failure = "0.1.3"
failure_derive = "0.1.3"
parking_lot = "0.6"
time = "0.1"

[dependencies.arrayvec]
features = ["use_union"]
version = "0.3"

[dependencies.sqa-jack]
version = "0.6"

[dependencies.uuid]
features = ["v4"]
version = "0.7"

[dev-dependencies]
hound = "3.0"

[features]
channels-128 = []
players-512 = []
